# holodule-ics

./: .env.example  .gitignore  CNAME  CONTRIBUTING.md  LICENSE  README-en.md  README.md  holodule-all.ics  holodule-china.ics  holodule-dev_is.ics  holodule-english.ics  holodule-hololive.ics  holodule-holostars.ics  holodule-holostars_english.ics  holodule-indonesia.ics  holodule-innk.ics  pyproject.toml  requirements.in  requirements.txt  run.py
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: test-dry-run.yml  update-devcontainer.yml  update-ics.yml
holodule/: __init__.py  errors.py  event.py  holodule.py  schedule.py
